added magnitude detection algorithm

--- a/notebooks/infinite_II.ipynb
+++ b/notebooks/infinite_II.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,25 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def discard_wrong_strings(l: list):\n",
-    "    for lst in l:\n",
-    "        string = ''.join([str(x) for x in lst])\n",
-    "\n",
-    "        # edge cases\n",
-    "        edge_cases = '-8-1'\n",
-    "        edge_cases_2 = '-1-1'\n",
-    "\n",
-    "        if edge_cases in string:\n",
-    "            l.remove(lst)\n",
-    "\n",
-    "\n",
-    "    print(l)\n",
-    "\n",
-    "\n",
     "def find_mag_changes(ll: list):\n",
     "    for lst in ll:\n",
     "        string = ''.join([str(x) for x in lst])\n",
@@ -92,25 +77,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def discard_wrong_strings(l: list):\n",
+    "    \n",
+    "    raw_list = [x[1] for x in l]\n",
+    "\n",
+    "    for i, lst in enumerate(raw_list):\n",
+    "        string = ''.join([str(x) for x in lst])\n",
+    "\n",
+    "        # edge cases\n",
+    "        edge_cases = '-8-1'\n",
+    "        edge_cases_2 = '-11'\n",
+    "        edge_cases_3 = '1-1'\n",
+    "\n",
+    "\n",
+    "        if edge_cases in string or edge_cases_2 in string or edge_cases_3 in string:\n",
+    "            l.pop(i)\n",
+    "\n",
+    "\n",
+    "    return [l[0]]\n",
+    "\n",
+    "\n",
+    "def discard_wrong_strings_II(offset: int, raw_list: list):\n",
+    "    eval = True\n",
+    "\n",
+    "    seq_len = '1' + offset * '0'\n",
+    "    string = ''.join([str(x) for x in raw_list])\n",
+    "\n",
+    "    print(string)\n",
+    "    # edge cases\n",
+    "    edge_cases = '-8-1'\n",
+    "    edge_cases_2 = '-11'\n",
+    "    edge_cases_3 = '1-1'\n",
+    "\n",
+    "    if edge_cases in string or edge_cases_2 in string or edge_cases_3 in string:\n",
+    "        eval = False\n",
+    "\n",
+    "    elif seq_len in string or seq_len[::-1] in string:\n",
+    "        eval = False\n",
+    "\n",
+    "    if eval:\n",
+    "        return (offset,raw_list)\n",
+    "    else:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0 -1  1  0 -1  0]\n",
-      " [ 1  0  2  1  0  1]\n",
-      " [-1 -2  0 -1 -2 -1]\n",
-      " [ 0 -1  1  0 -1  0]\n",
-      " [ 1  0  2  1  0  1]\n",
-      " [ 0 -1  1  0 -1  0]] = matrix\n",
+      "[[ 0  0  0 -1  0  0 -1]\n",
+      " [ 0  0  0 -1  0  0 -1]\n",
+      " [ 0  0  0 -1  0  0 -1]\n",
+      " [ 1  1  1  0  1  1  0]\n",
+      " [ 0  0  0 -1  0  0 -1]\n",
+      " [ 0  0  0 -1  0  0 -1]\n",
+      " [ 1  1  1  0  1  1  0]] = matrix\n",
       "\n",
-      "[(2, array([0, 0, 1])), (3, array([ 1, -1])), (4, array([0]))]\n",
+      "[(0, array([ 0,  0,  1, -1,  0,  1])), (1, array([ 0,  1,  0, -1,  1])), (2, array([1, 0, 0, 0])), (3, array([0, 0, 1])), (4, array([0, 1])), (5, array([1]))]\n",
       "\n",
-      "[0] 4\n",
-      "5 0\n",
-      "00001\n"
+      "[ 0  0  1 -1  0  1]\n",
+      "001-101\n",
+      "010-11\n",
+      "1000\n",
+      "001\n",
+      "01\n",
+      "1\n",
+      "(5, array([1]))\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = '0001001'\n",
+    "\n",
+    "mat = findString(string)\n",
+    "print(f'{mat} = matrix\\n')\n",
+    "\n",
+    "diagonals, lsts = get_diagonals(mat)\n",
+    "print(f'{diagonals}\\n')\n",
+    "\n",
+    "offset, raw_list = diagonals[0]\n",
+    "\n",
+    "print(raw_list)\n",
+    "\n",
+    "best_sol = None\n",
+    "\n",
+    "for i in range(len(diagonals)):\n",
+    "    offset, raw_list = diagonals[i]\n",
+    "    result  = discard_wrong_strings_II(offset, raw_list)\n",
+    "\n",
+    "    if result is not None:\n",
+    "        best_sol = result\n",
+    "\n",
+    "print(f'{best_sol}\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_comps(matrix):\n",
+    "    diagonals = []\n",
+    "    rows, cols = matrix.shape\n",
+    "\n",
+    "    # Lower diagonals\n",
+    "    for i in range(1, rows):\n",
+    "        diagonal = matrix.diagonal(offset=-i)\n",
+    "        if len(diagonal) >= 1:\n",
+    "                    diagonals.append(diagonal)\n",
+    "\n",
+    "    return diagonals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1-8-110', '01-8-9-1100', '001-8-9-9-11000', '0001-8-9-9-9-110000', '00001-8-9-9-9-9-1100000', '000001-8-9-9-9-9-9-11000000', '0000001-8-9-9-9-9-9-9-110000000', '00000001-8-9-9-9-9-9-9-9-1100000000', '000000001-8-9-9-9-9-9-9-9-9-11000000000', '0000000001-8-9-9-9-9-9-9-9-9-9-110000000000', '00000000001-8-9-9-9-9-9-9-9-9-9-9-1100000000000', '000000000001-8-9-9-9-9-9-9-9-9-9-9-9-11000000000000', '0000000000001-8-9-9-9-9-9-9-9-9-9-9-9-9-110000000000000']\n",
+      "solution found at jump between 10 and 100\n",
+      "-9-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def construct_mag_store():\n",
+    "    center = 10\n",
+    "\n",
+    "    output = []\n",
+    "\n",
+    "    for i in range(2,15):\n",
+    "        string = ''.join([str(x) for x in range(center - 2, center + 2)])\n",
+    "        # print(string)\n",
+    "        mat = findString(string)\n",
+    "\n",
+    "        # print(mat)\n",
+    "        diagonals = get_comps(mat)\n",
+    "\n",
+    "        # print(diagonals)\n",
+    "        output.append(''.join([str(x) for x in diagonals[i - 2].tolist()]))\n",
+    "        center *= 10\n",
+    "\n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "mag_feature_store = construct_mag_store()\n",
+    "\n",
+    "print(mag_feature_store)\n",
+    "        \n",
+    "\n",
+    "string = '9100'\n",
+    "\n",
+    "mat = findString(string)\n",
+    "# print(f'{mat} = matrix\\n')\n",
+    "\n",
+    "diagonals, lsts = get_diagonals(mat)\n",
+    "# print(f'{diagonals}\\n')\n",
+    "\n",
+    "for candidate in diagonals:\n",
+    "    flag = True\n",
+    "    sol = ''.join([str(x) for x in candidate[1].tolist()])\n",
+    "\n",
+    "\n",
+    "\n",
+    "    for i, feature in enumerate(mag_feature_store):\n",
+    "        if sol in mag_feature_store[i]:\n",
+    "\n",
+    "            print(f'solution found at jump between {10**i} and {10**(i+1)}')\n",
+    "            print(sol)\n",
+    "            flag = False\n",
+    "            break\n",
+    "        else:\n",
+    "            pass\n",
+    "    if flag == False:\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  8  9  9  8  9  8]\n",
+      " [ 0  0  8  9  9  8  9  8]\n",
+      " [-8 -8  0  1  1  0  1  0]\n",
+      " [-9 -9 -1  0  0 -1  0 -1]\n",
+      " [-9 -9 -1  0  0 -1  0 -1]\n",
+      " [-8 -8  0  1  1  0  1  0]\n",
+      " [-9 -9 -1  0  0 -1  0 -1]\n",
+      " [-8 -8  0  1  1  0  1  0]] = matrix\n",
+      "\n",
+      "Len diagonal 1\n"
      ]
     },
     {
@@ -120,23 +296,30 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[94], line 33\u001b[0m\n\u001b[1;32m     29\u001b[0m identifier \u001b[39m=\u001b[39m offset \u001b[39m*\u001b[39m \u001b[39m'\u001b[39m\u001b[39m0\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m1\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     31\u001b[0m \u001b[39mprint\u001b[39m(identifier)\n\u001b[0;32m---> 33\u001b[0m str_index \u001b[39m=\u001b[39m lst\u001b[39m.\u001b[39;49mindex(identifier)\n\u001b[1;32m     35\u001b[0m \u001b[39mprint\u001b[39m(str_index)\n\u001b[1;32m     37\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mThe first number is \u001b[39m\u001b[39m{\u001b[39;00mstring[str_index:str_index\u001b[39m \u001b[39m\u001b[39m+\u001b[39m\u001b[39m \u001b[39moffset\u001b[39m \u001b[39m\u001b[39m+\u001b[39m\u001b[39m \u001b[39m\u001b[39m1\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m at index \u001b[39m\u001b[39m{\u001b[39;00mstr_index\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[98], line 43\u001b[0m\n\u001b[1;32m     39\u001b[0m identifier \u001b[39m=\u001b[39m offset \u001b[39m*\u001b[39m \u001b[39m'\u001b[39m\u001b[39m0\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m1\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     41\u001b[0m \u001b[39m# print(identifier)\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m str_index \u001b[39m=\u001b[39m lst\u001b[39m.\u001b[39;49mindex(identifier)\n\u001b[1;32m     45\u001b[0m \u001b[39m# print(str_index)\u001b[39;00m\n\u001b[1;32m     47\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mThe first number is \u001b[39m\u001b[39m{\u001b[39;00mstring[str_index:str_index\u001b[39m \u001b[39m\u001b[39m+\u001b[39m\u001b[39m \u001b[39moffset\u001b[39m \u001b[39m\u001b[39m+\u001b[39m\u001b[39m \u001b[39m\u001b[39m1\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m at index \u001b[39m\u001b[39m{\u001b[39;00mstr_index\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
       "\u001b[0;31mValueError\u001b[0m: substring not found"
      ]
     }
    ],
    "source": [
-    "string = '675676'\n",
+    "string = '99100101'\n",
     "\n",
     "mat = findString(string)\n",
     "print(f'{mat} = matrix\\n')\n",
     "\n",
     "diagonals, lsts = get_diagonals(mat)\n",
-    "print(f'{diagonals}\\n')\n",
+    "# print(f'{diagonals}\\n')\n",
+    "\n",
+    "diagonals = discard_wrong_strings(diagonals)\n",
+    "# print(f'{diagonals}\\n')\n",
+    "\n",
     "\n",
     "min_len = len([x for x in range(20)])\n",
     "result = None\n",
     "offset = None\n",
+    "\n",
+    "print(f'Len diagonal {len(diagonals)}')\n",
+    "# print(diagonals)\n",
     "\n",
     "for i in range(len(diagonals)):\n",
     "    if len(diagonals[i][1]) < min_len:\n",
@@ -144,29 +327,29 @@
     "        result = diagonals[i][1]\n",
     "        offset = diagonals[i][0]\n",
     "\n",
-    "print(result, offset)\n",
+    "# print(result, offset)\n",
+    "lst = ''.join([str(char) for char in result])\n",
     "\n",
     "\n",
     "\n",
     "if type(result) == None:\n",
     "    print(string)\n",
+    "elif lst == '0':\n",
+    "    print(f'The first number is {string[:offset + 1]} at index 0')\n",
     "else:\n",
-    "    lst = ''.join([str(char) for char in result])\n",
-    "    print(offset + 1, lst)\n",
+    "    \n",
+    "    # print(offset + 1, lst)\n",
     "\n",
     "    identifier = offset * '0' + '1'\n",
     "\n",
-    "    print(identifier)\n",
+    "    # print(identifier)\n",
     "\n",
     "    str_index = lst.index(identifier)\n",
     "\n",
-    "    print(str_index)\n",
+    "    # print(str_index)\n",
     "\n",
     "    print(f'The first number is {string[str_index:str_index + offset + 1]} at index {str_index}')\n",
-    "\n",
-    "\n",
-    "# discard_wrong_strings(lsts)\n",
-    "# find_mag_changes(lsts)"
+    "\n"
    ]
   },
   {
