--- a/notebooks/infinite_II.ipynb
+++ b/notebooks/infinite_II.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def findString(string):\n",
+    "def getMatrix(string):\n",
     "    array = [int(x) for x in string]\n",
     "    array = np.array([list(array)])\n",
     "    n = len(array)\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,39 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0  0  0 -1  0  0 -1]\n",
-      " [ 0  0  0 -1  0  0 -1]\n",
-      " [ 0  0  0 -1  0  0 -1]\n",
-      " [ 1  1  1  0  1  1  0]\n",
-      " [ 0  0  0 -1  0  0 -1]\n",
-      " [ 0  0  0 -1  0  0 -1]\n",
-      " [ 1  1  1  0  1  1  0]] = matrix\n",
-      "\n",
-      "[(0, array([ 0,  0,  1, -1,  0,  1])), (1, array([ 0,  1,  0, -1,  1])), (2, array([1, 0, 0, 0])), (3, array([0, 0, 1])), (4, array([0, 1])), (5, array([1]))]\n",
-      "\n",
-      "[ 0  0  1 -1  0  1]\n",
-      "001-101\n",
-      "010-11\n",
-      "1000\n",
-      "001\n",
-      "01\n",
-      "1\n",
-      "(5, array([1]))\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "string = '0001001'\n",
     "\n",
-    "mat = findString(string)\n",
+    "mat = getMatrix(string)\n",
     "print(f'{mat} = matrix\\n')\n",
     "\n",
     "diagonals, lsts = get_diagonals(mat)\n",
@@ -183,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,19 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1-8-110', '01-8-9-1100', '001-8-9-9-11000', '0001-8-9-9-9-110000', '00001-8-9-9-9-9-1100000', '000001-8-9-9-9-9-9-11000000', '0000001-8-9-9-9-9-9-9-110000000', '00000001-8-9-9-9-9-9-9-9-1100000000', '000000001-8-9-9-9-9-9-9-9-9-11000000000', '0000000001-8-9-9-9-9-9-9-9-9-9-110000000000', '00000000001-8-9-9-9-9-9-9-9-9-9-9-1100000000000', '000000000001-8-9-9-9-9-9-9-9-9-9-9-9-11000000000000', '0000000000001-8-9-9-9-9-9-9-9-9-9-9-9-9-110000000000000']\n",
-      "solution found at jump between 10 and 100\n",
-      "-9-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def construct_mag_store():\n",
     "    center = 10\n",
@@ -224,7 +188,7 @@
     "    for i in range(2,15):\n",
     "        string = ''.join([str(x) for x in range(center - 2, center + 2)])\n",
     "        # print(string)\n",
-    "        mat = findString(string)\n",
+    "        mat = getMatrix(string)\n",
     "\n",
     "        # print(mat)\n",
     "        diagonals = get_comps(mat)\n",
@@ -241,9 +205,9 @@
     "print(mag_feature_store)\n",
     "        \n",
     "\n",
-    "string = '9100'\n",
+    "string = '979899100101102'\n",
     "\n",
-    "mat = findString(string)\n",
+    "mat = getMatrix(string)\n",
     "# print(f'{mat} = matrix\\n')\n",
     "\n",
     "diagonals, lsts = get_diagonals(mat)\n",
@@ -270,48 +234,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0  0  8  9  9  8  9  8]\n",
-      " [ 0  0  8  9  9  8  9  8]\n",
-      " [-8 -8  0  1  1  0  1  0]\n",
-      " [-9 -9 -1  0  0 -1  0 -1]\n",
-      " [-9 -9 -1  0  0 -1  0 -1]\n",
-      " [-8 -8  0  1  1  0  1  0]\n",
-      " [-9 -9 -1  0  0 -1  0 -1]\n",
-      " [-8 -8  0  1  1  0  1  0]] = matrix\n",
+      "[[ 0 -3  1 -6 -5 -5 -2 -3 -7  0  0]\n",
+      " [ 3  0  4 -3 -2 -2  1  0 -4  3  3]\n",
+      " [-1 -4  0 -7 -6 -6 -3 -4 -8 -1 -1]\n",
+      " [ 6  3  7  0  1  1  4  3 -1  6  6]\n",
+      " [ 5  2  6 -1  0  0  3  2 -2  5  5]\n",
+      " [ 5  2  6 -1  0  0  3  2 -2  5  5]\n",
+      " [ 2 -1  3 -4 -3 -3  0 -1 -5  2  2]\n",
+      " [ 3  0  4 -3 -2 -2  1  0 -4  3  3]\n",
+      " [ 7  4  8  1  2  2  5  4  0  7  7]\n",
+      " [ 0 -3  1 -6 -5 -5 -2 -3 -7  0  0]\n",
+      " [ 0 -3  1 -6 -5 -5 -2 -3 -7  0  0]] = matrix\n",
       "\n",
-      "Len diagonal 1\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "substring not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[98], line 43\u001b[0m\n\u001b[1;32m     39\u001b[0m identifier \u001b[39m=\u001b[39m offset \u001b[39m*\u001b[39m \u001b[39m'\u001b[39m\u001b[39m0\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m1\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     41\u001b[0m \u001b[39m# print(identifier)\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m str_index \u001b[39m=\u001b[39m lst\u001b[39m.\u001b[39;49mindex(identifier)\n\u001b[1;32m     45\u001b[0m \u001b[39m# print(str_index)\u001b[39;00m\n\u001b[1;32m     47\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mThe first number is \u001b[39m\u001b[39m{\u001b[39;00mstring[str_index:str_index\u001b[39m \u001b[39m\u001b[39m+\u001b[39m\u001b[39m \u001b[39moffset\u001b[39m \u001b[39m\u001b[39m+\u001b[39m\u001b[39m \u001b[39m\u001b[39m1\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m at index \u001b[39m\u001b[39m{\u001b[39;00mstr_index\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: substring not found"
+      "Len diagonal 1\n",
+      "The first number is 2518774592 at index 0\n"
      ]
     }
    ],
    "source": [
-    "string = '99100101'\n",
+    "string = '25187745922'\n",
     "\n",
-    "mat = findString(string)\n",
+    "mat = getMatrix(string)\n",
     "print(f'{mat} = matrix\\n')\n",
     "\n",
     "diagonals, lsts = get_diagonals(mat)\n",
     "# print(f'{diagonals}\\n')\n",
     "\n",
+    "if len(diagonals) == 0:\n",
+    "    print(string)\n",
+    "\n",
     "diagonals = discard_wrong_strings(diagonals)\n",
     "# print(f'{diagonals}\\n')\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "min_len = len([x for x in range(20)])\n",
@@ -350,6 +312,35 @@
     "\n",
     "    print(f'The first number is {string[str_index:str_index + offset + 1]} at index {str_index}')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findString(string):\n",
+    "    # Step 1 - Construct matrix using getMatrix \n",
+    "    mat = getMatrix(string)\n",
+    "\n",
+    "    # Step 2 - Get diagonals using get_diagonals\n",
+    "    diagonals, lsts = get_diagonals(mat)\n",
+    "    if len(diagonals) == 0:\n",
+    "        return string\n",
+    "    \n",
+    "    # Step 3 - Discard wrong strings using discard_wrong_strings\n",
+    "    diagonals = discard_wrong_strings(diagonals)\n",
+    "\n",
+    "    min_len = len([x for x in range(20)])\n",
+    "    result = None\n",
+    "    offset = None\n",
+    "\n",
+    "    for i in range(len(diagonals)):\n",
+    "        if len(diagonals[i][1]) < min_len:\n",
+    "            min_len = len(diagonals[i][1])\n",
+    "            result = diagonals[i][1]\n",
+    "            offset = diagonals[i][0]\n"
    ]
   },
   {
